--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.539Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.011Z",
+        "lastAccessed": "2025-10-22T03:32:16.011Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWePltgLRsisiJntf3VrjuMgcg7-wmY1ltNZnl4P94Zz1NXoPQU.BoyaDg..AAA.0.0.Bo9v8v.AWezO73ai5z-o4cm4n4utiSIxp0",
+        "value": "0iGjoyE0AEXVo8gmh.AWduzWJgrguSfhVg1qT24D9eV90YasU9uUABoYIoB-Ohyt0LwCs.BoyaDg..AAA.0.0.Bo-FAx.AWf2cL2VXn83JIOlDqtqujmxtEo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.012Z",
+        "lastAccessed": "2025-10-22T03:32:16.012Z"
     },
     {
         "key": "fbl_st",
-        "value": "101531255%3BT%3A29350294",
+        "value": "101425031%3BT%3A29351732",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.541Z",
-        "lastAccessed": "2025-10-21T11:58:14.541Z"
+        "creation": "2025-10-22T03:32:16.012Z",
+        "lastAccessed": "2025-10-22T03:32:16.012Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2961%3Btimestamp%3A1761017647",
+        "value": "v2%3Bclient_version%3A2961%3Btimestamp%3A1761103921",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-21T11:58:14.542Z",
-        "lastAccessed": "2025-10-21T11:58:14.542Z"
+        "creation": "2025-10-22T03:32:16.012Z",
+        "lastAccessed": "2025-10-22T03:32:16.012Z"
     }
 ]
