--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.512Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.225Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.515Z",
-        "lastAccessed": "2025-10-23T14:19:32.515Z"
+        "creation": "2025-10-24T04:11:09.226Z",
+        "lastAccessed": "2025-10-24T04:11:09.226Z"
     },
     {
         "key": "pas",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.516Z",
-        "lastAccessed": "2025-10-23T14:19:32.516Z"
+        "creation": "2025-10-24T04:11:09.227Z",
+        "lastAccessed": "2025-10-24T04:11:09.227Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWcLe944K7Zi4hZ7M3E22GrueG140hbhjq5mzCOehgS4H6T-fXU.BoyaDg..AAA.0.0.Bo-aSw.AWcVUo5h3nFZwlJJ2gzh8G6zy6w",
+        "value": "0iGjoyE0AEXVo8gmh.AWdfj7n1-6n-7DEtaqLfKaUXDvPxf1LMkPrV-o-b6kUtlEtH244.BoyaDg..AAA.0.0.Bo-vxN.AWcPSijQiITdqoVp_L8z5gCYPP4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.516Z",
-        "lastAccessed": "2025-10-23T14:19:32.516Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2963%3Btimestamp%3A1761191088",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.516Z",
-        "lastAccessed": "2025-10-23T14:19:32.516Z"
+        "creation": "2025-10-24T04:11:09.227Z",
+        "lastAccessed": "2025-10-24T04:11:09.227Z"
     },
     {
         "key": "fbl_st",
-        "value": "101727922%3BT%3A29353184",
+        "value": "100439859%3BT%3A29354650",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-23T14:19:32.516Z",
-        "lastAccessed": "2025-10-23T14:19:32.516Z"
+        "creation": "2025-10-24T04:11:09.227Z",
+        "lastAccessed": "2025-10-24T04:11:09.227Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761279053",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-24T04:11:09.227Z",
+        "lastAccessed": "2025-10-24T04:11:09.227Z"
     }
 ]
